# data-engineer-bootcamp-end-project

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
dags/: load_data_gcs_bq.py  load_data_to_bq.py  load_data_to_gcs.py
dbt/: .user.yml  profiles.yml
dbt/railwaymovement/: .user.yml  README.md  dbt_project.yml  profiles.yml
dbt/railwaymovement/models/: README.md
dbt/railwaymovement/models/marts/: fact_movements.sql
dbt/railwaymovement/models/marts/business_questions/: hours_of_each_day_with_highest_number_of_late_trains.sql  operating_company_that_has_highest_number_of_late_trains.sql  operating_company_that_has_highest_number_of_on_time_trains.sql  train_with_highest_number_of_off_route_records.sql  trains_that_have_never_been_late_or_off_route.sql
dbt/railwaymovement/models/staging/railwaymovement/: _src.yml  stg_networkrail__movements.sql  stg_networkrail__operating_companies.sql
dbt/railwaymovement/seeds/: _seeds.yml
